// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildAssetDescriptionFromContextPrompt > builds the combined description+notes prompt with full optional context 1`] = `
{
  "system": "You are a production asset supervisor for a film or animation project.
Your task is to write or enrich the description and notes for a specific asset.

Rules:
- Use only the provided context. Do not invent story facts not present in the input.
- description_draft: visual and production-oriented. What the asset looks like, its physical traits, style, materials. Suitable for use as an AI image generation prompt. Max 3 concise sentences. Write in English.
- notes_draft: narrative role, usage context across sequences and shots, design constraints, casting intent. Max 5 concise sentences. Write in English.
- If the asset already has a description or notes, improve and complete them — do not discard useful existing content.
- If context is limited, produce a cautious but useful draft based on the asset type and project tone.
- Do not mention missing information unless it is useful as a design note.
- A Project Style is provided below. Respect its World & Design Language and any listed rules; never contradict them.
Always respond with a valid JSON object matching exactly this schema:
{ "description_draft": "<visual and production description>", "notes_draft": "<narrative role, usage context, design constraints>" }
No markdown. No explanation. Only the JSON object.",
  "user": "Project: Neon Harvest
Pitch: A cyberpunk farmer defends her last crop.
Story: Full narrative synopsis.
Outline: ## Opening
Mara arrives.

Asset: Mara
Type: character
Current description: A cyberpunk farmer.
Current notes: Protagonist.

Sequences this asset appears in:
- The Standoff | mood: tense | location: Rooftop | purpose: Climax | summary: Tense confrontation.

Shots this asset appears in:
- SH010 — Close on Mara | Mara grips her weapon. | action: She raises her weapon. | camera: Low angle.

Reference images: Mara identity

Project Style:
Neon-lit dystopia.

Never depict corporate logos.

Write or enrich the description and notes for "Mara".",
}
`;

exports[`buildAssetDescriptionFromContextPrompt > builds the combined prompt with every optional field/array absent 1`] = `
{
  "system": "You are a production asset supervisor for a film or animation project.
Your task is to write or enrich the description and notes for a specific asset.

Rules:
- Use only the provided context. Do not invent story facts not present in the input.
- description_draft: visual and production-oriented. What the asset looks like, its physical traits, style, materials. Suitable for use as an AI image generation prompt. Max 3 concise sentences. Write in English.
- notes_draft: narrative role, usage context across sequences and shots, design constraints, casting intent. Max 5 concise sentences. Write in English.
- If the asset already has a description or notes, improve and complete them — do not discard useful existing content.
- If context is limited, produce a cautious but useful draft based on the asset type and project tone.
- Do not mention missing information unless it is useful as a design note.
Always respond with a valid JSON object matching exactly this schema:
{ "description_draft": "<visual and production description>", "notes_draft": "<narrative role, usage context, design constraints>" }
No markdown. No explanation. Only the JSON object.",
  "user": "Project: Neon Harvest

Asset: Mara
Type: character
Current description: (none)

Write or enrich the description and notes for "Mara".",
}
`;

exports[`buildAssetDescriptionOnlyPrompt > builds the description-only prompt with every optional field/array absent 1`] = `
{
  "system": "You are a production asset supervisor for a film or animation project.
Your task is to write or enrich ONLY the visual/production description for a specific asset.

Rules:
- Use only the provided context. Do not invent story facts not present in the input.
- description_draft: visual and production-oriented. What the asset looks like, its physical traits, style, materials. Suitable for use as an AI image generation prompt. Max 3 concise sentences. Write in English.
- If the asset already has a description, improve and complete it — do not discard useful existing content.
- If context is limited, produce a cautious but useful draft based on the asset type and project tone.
- Do not mention missing information unless it is useful as a design note.
- Do not write narrative role, usage context or design constraints — that belongs to Notes, which is not requested here.
Always respond with a valid JSON object matching exactly this schema:
{ "description_draft": "<visual and production description>" }
No markdown. No explanation. Only the JSON object.",
  "user": "Project: Neon Harvest

Asset: Mara
Type: character
Current description: (none)

Write or enrich only the description for "Mara".",
}
`;

exports[`buildAssetDescriptionOnlyPrompt > builds the description-only prompt with full optional context 1`] = `
{
  "system": "You are a production asset supervisor for a film or animation project.
Your task is to write or enrich ONLY the visual/production description for a specific asset.

Rules:
- Use only the provided context. Do not invent story facts not present in the input.
- description_draft: visual and production-oriented. What the asset looks like, its physical traits, style, materials. Suitable for use as an AI image generation prompt. Max 3 concise sentences. Write in English.
- If the asset already has a description, improve and complete it — do not discard useful existing content.
- If context is limited, produce a cautious but useful draft based on the asset type and project tone.
- Do not mention missing information unless it is useful as a design note.
- Do not write narrative role, usage context or design constraints — that belongs to Notes, which is not requested here.
- A Project Style is provided below. Respect its World & Design Language and any listed rules; never contradict them.
Always respond with a valid JSON object matching exactly this schema:
{ "description_draft": "<visual and production description>" }
No markdown. No explanation. Only the JSON object.",
  "user": "Project: Neon Harvest
Pitch: A cyberpunk farmer defends her last crop.
Story: Full narrative synopsis.
Outline: ## Opening
Mara arrives.

Asset: Mara
Type: character
Current description: A cyberpunk farmer.
Current notes: Protagonist.

Sequences this asset appears in:
- The Standoff | mood: tense | location: Rooftop | purpose: Climax | summary: Tense confrontation.

Shots this asset appears in:
- SH010 — Close on Mara | Mara grips her weapon. | action: She raises her weapon. | camera: Low angle.

Reference images: Mara identity

Project Style:
Neon-lit dystopia.

Never depict corporate logos.

Write or enrich only the description for "Mara".",
}
`;

exports[`buildAssetNotesOnlyPrompt > builds the notes-only prompt with every optional field/array absent 1`] = `
{
  "system": "You are a production asset supervisor for a film or animation project.
Your task is to write or enrich ONLY the notes for a specific asset.

Rules:
- Use only the provided context. Do not invent story facts not present in the input.
- notes_draft: narrative role, usage context across sequences and shots, design constraints, casting intent. Max 5 concise sentences. Write in English.
- If the asset already has notes, improve and complete them — do not discard useful existing content.
- If context is limited, produce a cautious but useful draft based on the asset type and project tone.
- Do not mention missing information unless it is useful as a design note.
- Do not write a visual/production description — that belongs to Description, which is not requested here.
Always respond with a valid JSON object matching exactly this schema:
{ "notes_draft": "<narrative role, usage context, design constraints>" }
No markdown. No explanation. Only the JSON object.",
  "user": "Project: Neon Harvest

Asset: Mara
Type: character
Current description: (none)

Write or enrich only the notes for "Mara".",
}
`;

exports[`buildAssetNotesOnlyPrompt > builds the notes-only prompt with full optional context 1`] = `
{
  "system": "You are a production asset supervisor for a film or animation project.
Your task is to write or enrich ONLY the notes for a specific asset.

Rules:
- Use only the provided context. Do not invent story facts not present in the input.
- notes_draft: narrative role, usage context across sequences and shots, design constraints, casting intent. Max 5 concise sentences. Write in English.
- If the asset already has notes, improve and complete them — do not discard useful existing content.
- If context is limited, produce a cautious but useful draft based on the asset type and project tone.
- Do not mention missing information unless it is useful as a design note.
- Do not write a visual/production description — that belongs to Description, which is not requested here.
- A Project Style is provided below. Respect its World & Design Language and any listed rules; never contradict them.
Always respond with a valid JSON object matching exactly this schema:
{ "notes_draft": "<narrative role, usage context, design constraints>" }
No markdown. No explanation. Only the JSON object.",
  "user": "Project: Neon Harvest
Pitch: A cyberpunk farmer defends her last crop.
Story: Full narrative synopsis.
Outline: ## Opening
Mara arrives.

Asset: Mara
Type: character
Current description: A cyberpunk farmer.
Current notes: Protagonist.

Sequences this asset appears in:
- The Standoff | mood: tense | location: Rooftop | purpose: Climax | summary: Tense confrontation.

Shots this asset appears in:
- SH010 — Close on Mara | Mara grips her weapon. | action: She raises her weapon. | camera: Low angle.

Reference images: Mara identity

Project Style:
Neon-lit dystopia.

Never depict corporate logos.

Write or enrich only the notes for "Mara".",
}
`;
